# textcad

./: .gitignore  LICENSE  README.md  bench.py  inspector.py  pyproject.toml  textcad.py
.github/workflows/: ci.yml
scripts/: bench.py
tests/: test_backends.py  test_codegen.py  test_inspector.py  test_loop.py
textcad/: __init__.py  backends.py  cli.py  codegen.py  inspector.py  llm.py  loop.py  render.py
