[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "textcad"
version = "0.1.0"
description = "Natural language to OpenSCAD parametric CAD via a fully-local agentic loop"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Donald Havery" }]
keywords = ["cad", "openscad", "llm", "ollama", "agent", "text-to-cad", "local-ai", "vlm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Scientific/Engineering",
]
dependencies = []  # pure stdlib; needs a running Ollama + an OpenSCAD binary

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
textcad = "textcad.cli:main"

[project.urls]
Homepage = "https://github.com/dbhavery/textcad"
Repository = "https://github.com/dbhavery/textcad"

[tool.setuptools]
packages = ["textcad"]

[tool.pytest.ini_options]
testpaths = ["tests"]
